fix text alignment

--- a/styles/scoring4.css
+++ b/styles/scoring4.css
@@ -123,7 +123,6 @@
     font-size: 5vw;
     background-color: transparent;
     margin-left: 6vw;
-    margin-top: 3.75rem;
   } 
 
   .button {
